--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
           packages:
             - gcc-4.9
             - g++-4.9
-      env: DEVITO_ARCH=gcc-4.9 DEVITO_OPENMP=1 OMP_NUM_THREADS=2 RUN_EXAMPLES=True INSTALL_TYPE=conda
+      env: DEVITO_LOGGING=DEBUG DEVITO_ARCH=gcc-4.9 DEVITO_OPENMP=1 OMP_NUM_THREADS=2 RUN_EXAMPLES=True INSTALL_TYPE=conda
     - os: linux
       python: "3.6"
       addons:
@@ -103,7 +103,7 @@ script:
   # Run tests with pip
   - if [[ $INSTALL_TYPE == 'pip_setup' ]]; then python setup.py test; fi
   # Run test with py.tests
-  - if [[ $INSTALL_TYPE == 'conda' ]]; then py.test --cov devito tests/; fi
+  - if [[ $INSTALL_TYPE == 'conda' ]]; then py.test --cov devito tests/test_adjoint.py; fi
   # Run remaining specialized examples and tests
   # Additional seismic operator tests
   - if [[ $RUN_EXAMPLES == 'True' ]]; then python examples/seismic/benchmark.py test -P tti -so 4 -a -d 20 20 20 -n 5; fi
